[package]
name = "cfpow"
version = "0.1.0"
authors = ["Xinhe Wang <wangxinhe06@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sha1 = "0.10.6"
wasm-bindgen = { version = "0.2.84", optional = true }

[features]
wasm = ["wasm-bindgen"]
