[package]
name = "cfpow"
version = "0.1.0"
authors = ["Xinhe Wang <wangxinhe06@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23.5", features = ["extension-module"], optional = true }
sha1 = "0.10.6"
wasm-bindgen = { version = "0.2.84", optional = true }

[features]
pyo3 = ["dep:pyo3"]
wasm-bindgen = ["dep:wasm-bindgen"]
